# thermostat

./: Cargo.toml  README.md  cargosha256.nix  flake.nix  memory.x  shell.nix  stream.py
.cargo/: config
doc/: PID tuning.md
notebooks/: Untitled.ipynb  iir_parameter_sweeps.ipynb
notebooks/.ipynb_checkpoints/: iir_parameter_sweeps-checkpoint.ipynb
pytec/: autotune.py  example.py  plot.py  setup.py  test.py
pytec/pytec/: client.py
scripts/: 1.csv  2.csv  coef.py  cross.csv  cross1.csv  cross2.csv  default_setup.py  iir_pid_no_matrix.py  log  mimo_crosscoupled_lowpass.py  parallel_pid.py  piid.py  plot_data.py  simo_piid_i.py  single_channel_pid.py  siso_pid.py  siso_piid.py  stream.py  stream_2ch.py  test.csv
src/: ad5680.rs  channel.rs  channel_state.rs  channels.rs  command_handler.rs  command_parser.rs  config.rs  dfu.rs  fan_ctrl.rs  flash_store.rs  hw_rev.rs  iir_array.rs  iir_float.rs  iir_pid.rs  init_log.rs  led.rs  leds.rs  main.rs  net.rs  pid.rs  pins.rs  server.rs  session.rs  steinhart_hart.rs  timer.rs  units.rs  usb.rs
src/ad7172/: adc.rs  checksum.rs  mod.rs  regs.rs
