[package]
categories = ["embedded", "no-std"]
name = "thermostat"
description = "Thermostat firmware"
license = "GPL-3.0-only"
authors = ["Astro <astro@spaceboyz.net>"]
version = "0.0.0"
keywords = ["thermostat", "laser", "physics"]
repository = "https://git.m-labs.hk/M-Labs/thermostat"
edition = "2018"

[package.metadata.docs.rs]
features = []
default-target = "thumbv7em-none-eabihf"

[dependencies]
panic-halt = "0.2"
# panic-semihosting = { version = "0.5", optional = true }
log = "0.4"
# bare-metal = "1"
cortex-m = "0.7"
cortex-m-rt = { version = "0.6", features = ["device"] }
# cortex-m-log = { version = "0.6", features = ["log-integration"] }
stm32f4xx-hal = { version = "0.9", features = ["rt", "stm32f427", "usb_fs"] }
# bit_field = "0.10"
# byteorder = { version = "1", default-features = false }
nom = { version = "5", default-features = false }
# num-traits = { version = "0.2", default-features = false, features = ["libm"] }
# usb-device = "0.2"
# usbd-serial = "0.1"
# nb = "1"
uom = { version = "0.30", default-features = false, features = ["autoconvert", "si", "f64", "use_serde"] }
eeprom24x = "0.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
# heapless = "0.5"
# serde-json-core = "0.1"
# sfkv = "0.1"
rtt-target = { version = "0.3", features = ["cortex-m"] }
# rtt target bump
rtt-logger = { git = "https://github.com/quartiq/rtt-logger.git", rev = "70b0eb5" }

[dependencies.stm32-eth]
rev = "a6e18b7"
features = ["stm32f427", "smoltcp-phy"]
git = "https://github.com/quartiq/stm32-eth.git"

[dependencies.smoltcp]
version = "0.7"
default-features = false
features = ["proto-ipv4", "socket-tcp", "log"]

# [patch.crates-io]
# TODO: pending https://github.com/stm32-rs/stm32f4xx-hal/pull/239
# stm32f4xx-hal = { git = "https://github.com/astro/stm32f4xx-hal.git", branch = "flash" }

#[features]
# semihosting = ["panic-semihosting", "cortex-m-log/semihosting"]

[profile.release]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"
lto = true
